--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>React Router 1</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="../src/index.jsx"></script>
-  </body>
+<html>
+    <head>
+        <link rel="stylesheet" href="../src/index.css">
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="../src/index.jsx" type="module"></script>
+    </body>
 </html>
